Langchain Vector Store Ingestion Pipeline

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "langchain>=0.3.27",
     "langchain-chroma>=0.2.5",
     "langchain-community>=0.3.29",
+    "langchain-openai>=0.3.32",
     "langchainhub>=0.1.21",
     "langgraph>=0.6.6",
     "pytest>=8.4.1",
