--- a/.gitignore
+++ b/.gitignore
@@ -340,3 +340,16 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# ChromaDB local persistence
+chroma/
+.chroma/
+chromadb/
+.chromadb/
+
+# Sometimes temp metadata/logs
+*.sqlite3
+*.db
+*.bin
+*.pkl
+*.parquet
+*.log
